Add start to orbital mechanics work notebook

--- a/05_spaceMaps.ipynb
+++ b/05_spaceMaps.ipynb
@@ -80,7 +80,8 @@
     "solsys_df['UTC'] = [datetime_UTC]\n",
     "\n",
     "# Creating a dictionary of body names and NAIF ID. Note that for Mars we are using its barycentre\n",
-    "SOLSYS_DICT = {'SUN':10, 'VENUS':299, 'MOON':301, 'MARS':4}"
+    "SOLSYS_DICT = {'SUN':10, 'VENUS':299, 'MOON':301, 'MARS':4}\n",
+    "BODY_COLOR_ARRAY = ['y', 'tab:orange', 'tab:gray', 'tab:red']\n"
    ]
   },
   {
@@ -211,7 +212,7 @@
     "# invert the longitude values\n",
     "\n",
     "for body_name in SOLSYS_DICT:\n",
-    "   solsys_df[f'{body_name}_long_rad4plot_ecl'] = solsys_df[f'{body_name}_long_rad_ecl'] \\\n",
+    "   solsys_df[f'{body_name}_long_rad4plot_ecl'] = solsys_df.[f'{body_name}_long_rad_ecl'] \\\n",
     "       .apply(lambda x: -1*((x % np.pi) - np.pi) if x > np.pi else -1*x)\n"
    ]
   },
